# ikaslab

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  data-model.md  modules.md  release-and-update.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/app/: App.tsx
src/app/providers/: AppDataProvider.tsx
src/app/routes/: HomePage.tsx  ModuleRoutePage.tsx  ProfileSelectionPage.tsx
src/app/shell/: AppShell.tsx  UpdateNotifier.tsx
src/domain/avatars/: avatarCatalog.ts  types.ts
src/domain/modules/: types.ts
src/domain/progress/: progress.test.ts  progress.ts
src/domain/scoring/: scoring.test.ts  scoring.ts
src/domain/sessions/: types.ts
src/domain/users/: types.ts  userRules.test.ts  userRules.ts
src/modules/: registry.test.ts  registry.ts  types.ts
src/modules/english-vocabulary/: VocabularyModule.tsx  VocabularySettings.tsx  manifest.ts
src/modules/placeholder/: PlaceholderModule.tsx
src/services/content/: vocabularyContentService.ts
src/services/persistence/: appRepository.ts  localFallbackStore.test.ts  localFallbackStore.ts  tauriClient.ts
src/services/updater/: updaterService.ts
src/shared/styles/: global.css
src/shared/ui/: AvatarBadge.tsx  BrandLogo.tsx  Button.tsx  Card.tsx  ChoiceButton.tsx  EmptyState.tsx  GlassPanel.tsx  LoadingView.tsx  (+2 more)
(+10 files in other folders)
