[package]
name = "ikaslab"
version = "0.1.2"
description = "IkasLab educational desktop app"
authors = ["IkasLab"]
edition = "2021"
license = "MIT"

[lib]
name = "ikaslab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8", features = [] }
tauri-plugin-updater = "2.9"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
